avoid wrap in legend

--- a/DeskDexCore/wwwroot/css/map.css
+++ b/DeskDexCore/wwwroot/css/map.css
@@ -62,6 +62,7 @@
 .legendtoggle {
     pointer-events: auto;
     cursor: pointer;
+    white-space: nowrap;
 }
 
 .stationDiv {
